--- a/color_interpolate/example/pubspec.yaml
+++ b/color_interpolate/example/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   color_interpolate:
     path: ../
+  smooth_page_indicator: ^1.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
